--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -44,6 +44,7 @@ section {
   width: 100vw;
   height: 100vh;
   display: flex;
+  background: #000;
   justify-content: center;
   align-items: center;
   gap: 2px;
